--- a/MiCode-Note/AndroidManifest.xml
+++ b/MiCode-Note/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="net.micode.notes"
+    package="org.wr.notes"
     android:versionCode="1"
     android:versionName="0.1" >
 
@@ -17,12 +17,13 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>"
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:icon="@drawable/icon_app"
         android:label="@string/app_name" >
         <activity
-            android:name=".ui.NotesListActivity"
+            android:name="org.wr.notes.ui.NotesListActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTop"
@@ -44,7 +45,7 @@
         </activity>
 
         <activity
-            android:name=".ui.NoteEditActivity"
+            android:name="org.wr.notes.ui.NoteEditActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:launchMode="singleTop"
             android:theme="@style/NoteTheme" >
@@ -66,12 +67,12 @@
         </activity>
 
         <provider
-            android:name="net.micode.notes.data.NotesProvider"
+            android:name="org.wr.notes.data.NotesProvider"
             android:authorities="micode_notes"
             android:multiprocess="true" />
 
         <receiver
-            android:name=".widget.NoteWidgetProvider_2x"
+            android:name="org.wr.notes.widget.NoteWidgetProvider_2x"
             android:label="@string/app_widget2x2" >
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -84,7 +85,7 @@
                 android:resource="@xml/widget_2x_info" />
         </receiver>
         <receiver
-            android:name=".widget.NoteWidgetProvider_4x"
+            android:name="org.wr.notes.widget.NoteWidgetProvider_4x"
             android:label="@string/app_widget4x4" >
 
             <intent-filter>
@@ -98,33 +99,33 @@
                 android:resource="@xml/widget_4x_info" />
         </receiver>
 
-        <receiver android:name=".ui.AlarmInitReceiver" >
+        <receiver android:name="org.wr.notes.ui.AlarmInitReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
         <receiver
-            android:name="net.micode.notes.ui.AlarmReceiver"
+            android:name="org.wr.notes.ui.AlarmReceiver"
             android:process=":remote" >
         </receiver>
 
         <activity
-            android:name=".ui.AlarmAlertActivity"
+            android:name="org.wr.notes.ui.AlarmAlertActivity"
             android:label="@string/app_name"
             android:launchMode="singleInstance"
             android:theme="@android:style/Theme.Holo.Wallpaper.NoTitleBar" >
         </activity>
 
         <activity
-            android:name="net.micode.notes.ui.NotesPreferenceActivity"
+            android:name="org.wr.notes.ui.NotesPreferenceActivity"
             android:label="@string/preferences_title"
             android:launchMode="singleTop"
             android:theme="@android:style/Theme.Holo.Light" >
         </activity>
 
         <activity 
-            android:name="net.micode.notes.ui.DrawImageActivity"
+            android:name="org.wr.notes.ui.DrawImageActivity"
             ></activity>
         
         <service
